networkpolicy/networkpolicy__basic_kafka_setup__strimzi__to__postgresql__egress__ports__5432__nr37__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: strimzi--to--postgresql--egress--ports--5432--nr37
  namespace: strimzi
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: postgresql
    ports:
    - protocol: TCP
      port: 5432
